# meta-magic_mount-rs

./: .gitignore  Cargo.toml  LICENSE_HEADER  README.md  build.rs  build.sh  changelog.md  cliff.toml  licenserc.toml  update.json
.cargo/: config.toml
.github/: bot.py  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/bot/: bot.py
.github/workflows/: build.yml  ci.yml  license_header.yml  lints.yml  release.yml  test.yml
crates/verification/: Cargo.toml
crates/verification/src/: lib.rs  utils.rs
docs/: README.md  README_en.md  README_ru.md
module/: config.toml  config_apatch.toml  customize.sh  metainstall.sh  metamount.sh  metauninstall.sh  uninstall.sh
src/: Makefile  bind_mount.rs  config.rs  defs.rs  errors.rs  magic_mount.c  magic_mount.h  main.c  main.rs  misc.rs  parser.rs  scanner.rs  utils.c  utils.h  utils.rs
src/conf/: cli.rs  config.rs
src/core/: executor.rs  inventory.rs  mod.rs  modules.rs  planner.rs  state.rs  storage.rs  sync.rs
src/magic_mount/: mod.rs  node.rs  try_umount.rs  utils.rs
src/mount/: magic.rs  mod.rs  overlay.rs
src/parser/: mod.rs  mount.rs
src/utils/: ksucalls.rs  mod.rs
template/: customize.sh  metamount.sh
update/: changelog.md  update.json
webui/: eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  vite.config.ts
webui/src/: App.svelte  App.tsx  App.vue  app.css  global.d.ts  index.css  init.ts  layout.css  locate.json  main.js  main.ts  main.tsx  material-web.d.ts  miuix.d.ts  (+3 more)
xtask/: Cargo.toml
(+88 files in other folders)
